added locations creations

--- a/rpg-game-vanilla/index.html
+++ b/rpg-game-vanilla/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+<title>RPG game</title>
+<script type="module" src="/main.js" defer></script>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <main>
+      <section>
+        <h1>Welcome to RPG game!</h1>
+        <button>start game</button>
+      </section>
+    </main>
   </body>
 </html>
