basic create functionality works

--- a/rpg-game-vanilla/pages/playerCreation.html
+++ b/rpg-game-vanilla/pages/playerCreation.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="playerCreation.css">
-    <script src="playerCreation.js" defer></script>
+    <script type="module" src="playerCreation.js" defer></script>
     <title>Player Creation</title>
 </head>
 
@@ -39,6 +39,7 @@
         </section>
 
     </main>
+    <footer></footer>
 </body>
 
 </html>
