--- a/rpg-game-vanilla/pages/playerCreation.html
+++ b/rpg-game-vanilla/pages/playerCreation.html
@@ -36,6 +36,10 @@
         </section>
         <section id="playerImage">
             <img src="/assets/fighter1.png" alt="player image" width="400" height="400">
+            <div id="btns">
+                <button id="left">left</button>
+                <button id="right">right</button>
+            </div>
         </section>
 
     </main>
