--- a/rpg-game-vanilla/index.html
+++ b/rpg-game-vanilla/index.html
@@ -11,7 +11,8 @@
     <main>
       <section>
         <h1>Welcome to RPG game!</h1>
-        <button>start game</button>
+        <button id="btn">start game</button>
+        <h6 id="status"></h6>
       </section>
     </main>
   </body>
