--- a/rpg-game-vanilla/index.html
+++ b/rpg-game-vanilla/index.html
@@ -12,7 +12,7 @@
       <section>
         <h1>Welcome to RPG game!</h1>
         <button id="btn">start game</button>
-        <h6 id="status"></h6>
+        <div id="status"></div>
       </section>
     </main>
   </body>
