added wirld map

--- a/rpg-game-vanilla/pages/worldMap/worldMap.html
+++ b/rpg-game-vanilla/pages/worldMap/worldMap.html
@@ -6,12 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="worldMap.css">
-    <script src="worldMap.js" defer></script>
+    <script src="worldMap.js" type="module" defer></script>
     <title>World Map</title>
 </head>
 
 <body>
-    <main></main>
+    <main>
+        <h1>World Map</h1>
+        <section id="map">
+            <img src="/assets/worldMap/map.jpg" width="90%" height="90%" alt="world map">
+        </section>
+        <section id="buttons">
+        </section>
+    </main>
 </body>
 
 </html>
