added header and location page

--- a/rpg-game-vanilla/index.html
+++ b/rpg-game-vanilla/index.html
@@ -8,6 +8,7 @@
 <script type="module" src="/main.js" defer></script>
   </head>
   <body>
+    <div id="header"></div>
     <main>
       <section>
         <h1>Welcome to RPG game!</h1>
