added sorting contracts

--- a/rpg-game-vanilla/pages/location/location.html
+++ b/rpg-game-vanilla/pages/location/location.html
@@ -13,7 +13,13 @@
 <body>
     <header></header>
     <h1 id="pageTitle"></h1>
-    <main></main>
+    <section id="actions">
+        <button>sort by xp</button>
+        <button>sort by gold</button>
+        <button>sort by monster level</button>
+    </section>
+    <main>
+    </main>
 </body>
 
 </html>
