working on combat

--- a/rpg-game-vanilla/pages/combat/combat.html
+++ b/rpg-game-vanilla/pages/combat/combat.html
@@ -17,11 +17,12 @@
     </header>
     <main>
         <section id="monsterImage"></section>
+        <section id="log"></section>
         <section id="playerImage"></section>
         <section id="buttons">
-            <button>attack</button>
-            <button>run away</button>
-            <button>drink potion</button>
+            <button id="attack">attack</button>
+            <button id="run">run away</button>
+            <button id="potion">drink potion</button>
         </section>
         <section id="stats">
         </section>
