working on comabt bugs

--- a/rpg-game-vanilla/pages/combat/combat.html
+++ b/rpg-game-vanilla/pages/combat/combat.html
@@ -25,6 +25,8 @@
             <button id="potion">drink potion</button>
         </section>
         <section id="stats">
+            <p id="mosnterLife"></p>
+            <p id="PlayerLife"></p>
         </section>
     </main>
 </body>
