fixed some bugs

--- a/rpg-game-vanilla/pages/playerCreation/playerCreation.html
+++ b/rpg-game-vanilla/pages/playerCreation/playerCreation.html
@@ -35,7 +35,7 @@
             <button>Create Player</button>
         </section>
         <section id="playerImage">
-            <img src="/assets/fighter1.png" alt="player image" width="400" height="400">
+            <img src="/assets/player/fighter1.png" alt="player image" width="400" height="400">
             <div id="btns">
                 <button id="left">left</button>
                 <button id="right">right</button>
